tests/ui/codemap_tests/one_line.stderr
error[E0499]: cannot borrow `v` as mutable more than once at a time
  --> $DIR/one_line.rs:3:12
   |
LL |     v.push(v.pop().unwrap());
   |     -------^^^^^^^----------
   |     | |    |
   |     | |    second mutable borrow occurs here
   |     | first borrow later used by call
   |     first mutable borrow occurs here
   |
help: try adding a local storing this argument...
  --> $DIR/one_line.rs:3:12
   |
LL |     v.push(v.pop().unwrap());
   |            ^^^^^^^
help: ...and then using that local as the argument to this call
  --> $DIR/one_line.rs:3:5
   |
LL |     v.push(v.pop().unwrap());
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0499`.
